--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body{
 color:#800000 ;
 background-color:#C0C0C0 ;
@@ -30,6 +31,25 @@ font-size: 40px;
 p{
     font-size: 20px;
 }
+
+  .categoria{
+
+    padding-left: 20px;
+    padding-right: 20px;
+
+  }
+
+  .categoria-videos {
+    display:flex;
+    overflow-x:auto;
+    gap: 10px;
+
+  }
+
+  img{
+
+    height: 200px;
+  }
 
 .chamada-texto{
     margin-right: 1%;
