--- a/style.css
+++ b/style.css
@@ -51,6 +51,21 @@ p{
     height: 200px;
   }
 
+  .categoria-videos img{
+
+    opacity: 0.5;
+    height: 200px;
+
+  }
+
+  .categoria-videos img:hover{
+
+    opacity: 1.0;
+    border: 3px solid #410101 ;
+
+  }
+
+
 .chamada-texto{
     margin-right: 1%;
     text-align: center;
