--- a/style.css
+++ b/style.css
@@ -118,6 +118,17 @@ p{
     background-color: #800000;
     color:rgb(196, 0, 0);
 }
+}
+
+section{    
+padding-bottom: 80px;
+padding-top: 80px;
+background: gray;
+display: flex;
+justify-content: center;
+}
+
+h1{
 
 img{
     height: 200px;
